@@ -1,14 +1,11 @@
 #This file is part of Tryton.  The COPYRIGHT file at the top level of
 #this repository contains the full copyright notices and license terms.
+import warnings
+
 from sql import Query, Expression
 
 from ...config import CONFIG
 from .field import Field, FieldTranslate, size_validate, SQLType
-
-
-def autocomplete_validate(value):
-    if value:
-        assert isinstance(value, list), 'autocomplete must be a list'
 
 
 class Char(FieldTranslate):
@@ -31,21 +28,15 @@ class Char(FieldTranslate):
             readonly=readonly, domain=domain, states=states, select=select,
             on_change=on_change, on_change_with=on_change_with,
             depends=depends, context=context, loading=loading)
-        self.__autocomplete = None
-        self.autocomplete = autocomplete if autocomplete else None
+        self.autocomplete = set()
+        if autocomplete:
+            warnings.warn('autocomplete argument is deprecated, use the '
+                'depends decorator', DeprecationWarning, stacklevel=2)
+            self.autocomplete |= set(autocomplete)
         self.translate = translate
         self.__size = None
         self.size = size
     __init__.__doc__ += Field.__init__.__doc__
-
-    def _get_autocomplete(self):
-        return self.__autocomplete
-
-    def _set_autocomplete(self, value):
-        autocomplete_validate(value)
-        self.__autocomplete = value
-
-    autocomplete = property(_get_autocomplete, _set_autocomplete)
 
     def _get_size(self):
         return self.__size
